networkpolicy/np-examples.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-backend
  labels:
    app: app
    tier: backend
    role: master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: app
    tier: backend
    role: master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-backend
spec:
  selector:
    matchLabels:
      app: app
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis:e2e
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
  labels:
    app: app
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: app
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend
spec:
  selector:
    matchLabels:
      app: app
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: app
        tier: frontend
    spec:
      containers:
      - name: app-frontend
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: other-backend
  labels:
    app: other
    tier: backend
    role: master
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: other
    tier: backend
    role: master
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other-backend
spec:
  selector:
    matchLabels:
      app: other
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: other
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: k8s.gcr.io/redis:e2e
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: other-frontend
  labels:
    app: other
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: other
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other-frontend
spec:
  selector:
    matchLabels:
      app: other
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: other
        tier: frontend
    spec:
      containers:
      - name: other-frontend
        image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
