networkpolicy/np-app-6379.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-backend-6379
spec:
  podSelector:
    matchLabels:
      app: app
      tier: backend
  ingress:
  - ports:
    - port: 6379
    from:
    - podSelector:
        matchLabels:
          app: app
          tier: frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-front-2-back
spec:
  podSelector:
    matchLabels:
      app: app
      tier: frontend
  egress:
  - ports:
    - port: 6379
    to:
    - podSelector:
        matchLabels:
          app: app
          tier: backend
