networkpolicy/np-app-80.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-80
spec:
  podSelector:
    matchLabels:
      app: app
      tier: frontend
  ingress:
  - ports:
    - port: 80
    from:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.244.0.0/16
